cluster/apps/pgbackup/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pgbackup
  labels:
    app: pgbackup

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbackup
  template:
    metadata:
      labels:
        app: pgbackup
    spec:
      containers:
        - name: pgbackup
          image: prodrigestivill/postgres-backup-local:latest
          volumeMounts:
            - mountPath: /backups
              name: volume
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: pvc-pgbackup
