cluster/apps/pgbackup/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgbackup-network-policy
spec:
  podSelector:
    matchLabels:
      app: pgbackup
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
      ports:
        - port: 5432
          protocol: TCP
